frontend/tests/cases/negative/badKindInInterfaceConstraint.gr
data A = A

-- 'A' is not a valid constraint
interface {A} => Simple a where
  simple : a -> a
